<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.detail.DetailActivity">

    <ScrollView
        android:id="@+id/scrollViewDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_detail"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/profile_user"
                android:layout_marginTop="25dp"
                tools:srcCompat="@tools:sample/avatars"
                />

            <TextView
                android:id="@+id/tv_detai_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="22sp"
                android:textStyle="bold"
                android:text="@string/nama_user"/>

            <TextView
                android:id="@+id/tv_detail_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textSize="18sp"
                android:text="@string/user_name"/>

            <LinearLayout
                android:id="@+id/linearLayoutFollowing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_detail_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:textSize="18sp"
                    android:text="@string/followers"/>

                <TextView
                    android:id="@+id/tv_detail_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textSize="18sp"
                    android:text="@string/following"/>
            </LinearLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                app:tabTextColor="@android:color/white"
                app:tabIndicatorColor="@android:color/white"/>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_gravity="center_horizontal"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:foregroundGravity="bottom"
        app:fabSize="normal"
        app:layout_anchor="@id/scrollViewDetail"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/baseline_favorite_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>